force-app/main/default/objects/Sanitization__c/Sanitization__c.object-meta.xml
<CustomObject>
    <label>Sanitization</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Sanitization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sanitizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>