force-app/main/default/objects/Sanitization__c/fields/Location_sanitization__c.field-meta.xml
<CustomField>
    <fullName>Location_sanitization__c</fullName>
    <label>Location sanitization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Location__c</field>
            <operation>equals</operation>
            <valueField>Location_Daily_Info__c.Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location_Daily_Info__c</referenceTo>
    <relationshipLabel>Sanitizations</relationshipLabel>
    <relationshipName>Sanitizations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>