force-app/main/default/objects/Sanitization__c/fields/SanitisationOperator__c.field-meta.xml
<CustomField>
    <fullName>SanitisationOperator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sanitisation Operator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sanitizations</relationshipName>
    <type>Lookup</type>
</CustomField>