force-app/main/default/objects/Sanitization__c/fields/Sanitization_Date__c.field-meta.xml
<CustomField>
    <fullName>Sanitization_Date__c</fullName>
    <label>Sanitization Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>