force-app/main/default/objects/Sanitization__c/fields/Sanitization_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Sanitization_DateTime__c</fullName>
    <label>Sanitization DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>