force-app/main/default/objects/Sanitization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Sanitization_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>